grammar.js
    program: $ => seq(
      alias(optional(token.immediate(/#![^\n\r]*/)), $.shebang_comment),
      repeat($._statement),
    ),

    _statement: $ => prec(1, seq(choice(
      $.var_declaration,
      $.var_assignment,
      $.type_declaration,
      $.record_declaration,
      $.interface_declaration,
      $.enum_declaration,
      $.return_statement,
      $.break,
      $._for_statement,
      $.do_statement,
      $.while_statement,
      $.repeat_statement,
      $.function_call,
      $.function_statement,
      $.macroexp_statement,
      $.if_statement,
      seq('::', alias($.identifier, $.label), '::'),
      $.goto,
    ), optional(';'))),

    return_statement: $ => prec.right(1, seq(
      'return',
      optional(choice(
        list($._expression),
        seq('(', list($._expression), ')'),
      )),
    )),

    _expression: $ => choice(
      $.identifier,
      $._var,
      $.number,
      $.string,
      $.boolean,
      $.nil,
      $.table_constructor,
      $.anon_function,
      $.function_call,
      $._prefix_expression,
      $.bin_op,
      $.unary_op,
      $.varargs,
      $.type_cast,
      $.parenthesized_expression,
    ),

    _type_def: $ => prec(1, seq(
      'type',
      field('name', $.identifier),
      field('typeargs', optional($.typeargs)),
      '=',
      field('value', choice(
        $._type, $._newtype,
      )),
    )),

    type_declaration: $ => choice(
      seq(
        field('scope', $.scope),
        $._type_def,
      ),
      $.record_declaration,
      $.interface_declaration,
      $.enum_declaration,
    ),

    _prefix_expression: $ => prec(10, choice(
      $._var,
      $.function_call,
      $.parenthesized_expression,
    )),
    arguments: $ => choice(
      seq('(', optional(list($._expression)), ')'),
      $.string,
      $.table_constructor,
    ),
    function_statement: $ => choice(
      seq(
        $.scope,
        'function',
        field('name', $.identifier),
        field('signature', $.function_signature),
        field('body', $.function_body),
      ),
      seq(
        'function',
        field('name', $.function_name),
        field('signature', $.function_signature),
        field('body', $.function_body),
      ),
    ),

    typearg: $ => choice(
      field('name', $.identifier),
      seq(field('name', $.identifier), 'is', field('constraint', $._type))
    ),
    typeargs: $ => seq('<', list($.typearg), '>'),

    anon_function: $ => seq(
      'function',
      field('signature', $.function_signature),
      field('body', $.function_body),
    ),

    function_signature: $ => seq(
      field('typeargs', optional($.typeargs)),
      field('arguments', alias($.signature_arguments, $.arguments)),
      optional(seq(':', field('return_type', $.return_type))),
    ),

    function_body: $ => seq(
      repeat($._statement),
      'end',
    ),

    _record_entry: $ => choice(
      alias($.record_field, $.field),
      alias($._type_def, $.typedef),
      alias($._interface_def, $.interface_declaration),
      alias($._record_def, $.record_declaration),
      alias($._enum_def, $.enum_declaration),
      alias($._interface_def, $.interface_declaration),
      alias($._macroexp_def, $.macroexp_declaration),
    ),

    record_body: $ => seq(
      optional(seq(
        field('is_types', seq('is', list($._type))),
        optional(field('where', seq('where', $._expression))),
      )),
      optional(seq('{', alias($._type, $.record_array_type), '}')),
      repeat(choice(
        $._record_entry,
        alias('userdata', $.userdata),
        field('metamethod', alias($.metamethod_annotation, $.metamethod)),
      )),
      'end',
    ),

    _record_def: $ => seq(
      'record',
      field('name', $.identifier),
      field('typeargs', optional($.typeargs)),
      field('record_body', $.record_body),
    ),

    _interface_def: $ => seq(
      'interface',
      field('name', $.identifier),
      field('typeargs', optional($.typeargs)),
      field('interface_body', alias($.record_body, $.interface_body)),
    ),

    interface_declaration: $ => seq(
      $.scope,
      $._interface_def,
    ),

    record_declaration: $ => seq(
      $.scope,
      $._record_def,
    ),

    enum_body: $ => seq(
      repeat($.string),
      'end',
    ),

    _enum_def: $ => seq(
      'enum',
      field('name', $.identifier),
      field('enum_body', $.enum_body),
    ),

    enum_declaration: $ => seq(
      $.scope,
      $._enum_def,
    ),

    anon_interface: $ => seq(
      'interface',
      optional($.typeargs),
      field('interface_body', alias($.record_body, $.interface_body)),
    ),

    anon_record: $ => seq(
      'record',
      optional($.typeargs),
      field('record_body', $.record_body),
    ),

    _type: $ => prec(2, choice(
      $.simple_type,
      $.type_index,
      $.table_type,
      $.function_type,
      $.type_union,
      seq('(', $._type, ')'),
    )),

    simple_type: $ => prec.right(1000, seq(
      field('name', $.identifier),
      optional(alias($.typearg_params, $.typeargs)),
    )),

    table_type: $ => seq(
      '{',
      choice(
        field('value_type', $._type),
        seq(
          field('key_type', $._type),
          ':',
          field('value_type', $._type),
        ),
        seq(
          field('tuple_type', $._type),
          repeat1(seq(',', field('tuple_type', $._type))),
        ),
      ),
      '}',
    ),

    index: $ => prec(1, seq(
      field('indexed_object', $._prefix_expression),
      choice(
        field('key', seq('.', $.identifier)),
        field('expr_key', seq('[', $._expression, ']')),
      ),
    )),

    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,
    _short_string_content: $ => alias(repeat1(choice(
      $.format_specifier,
      $.escape_sequence,
      token.immediate(prec(1, '%')),
      prec(0, $._short_string_char),
    )), $.string_content),

    _long_string_content: $ => alias(repeat1(choice(
      $.format_specifier,
      $._long_string_char,
      token.immediate(prec(1, '%')),
    )), $.string_content),

    string: $ => prec(2, choice(
      seq(
        field('start', alias($._short_string_start, 'short_string_start')),
        field('content', optional($._short_string_content)),
        field('end', alias($._short_string_end, 'short_string_end')),
      ),

      seq(
        field('start', alias($._long_string_start, 'long_string_start')),
        field('content', optional($._long_string_content)),
        field('end', alias($._long_string_end, 'long_string_end')),
      ),
    )),
